[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=2]
[ext_resource path="res://Scripts/RestarLevel.gd" type="Script" id=3]
[ext_resource path="res://Scenes/LVL_WAVE_visualizer.tscn" type="PackedScene" id=4]
[ext_resource path="res://Audio/Musics/Loop1.wav" type="AudioStream" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.435294, 0.435294, 0.435294, 1 )
border_color = Color( 0.2, 0.2, 0.2, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.286275, 0.286275, 0.286275, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.137255, 0.137255, 0.137255, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.356863, 0.356863, 0.356863, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.156863, 0.156863, 0.156863, 1 )

[sub_resource type="Animation" id=4]
resource_name = "NextWave"
length = 0.7
tracks/0/type = "bezier"
tracks/0/path = NodePath("ColorRect3:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.7 )
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("ColorRect3:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ColorRect3:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ColorRect3:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("ColorRect3:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[node name="Game" type="Node2D" groups=["GAME"]]
script = ExtResource( 2 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_right = 808.0
margin_bottom = 808.0
color = Color( 0, 0, 0, 1 )

[node name="ColorRect3" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 808.0
margin_bottom = 808.0
color = Color( 0.133333, 0.133333, 0.133333, 1 )

[node name="LVL_WAVE_visualizer" parent="ColorRect3" instance=ExtResource( 4 )]
position = Vector2( 260, 80 )
scale = Vector2( 2, 2 )
z_index = 10

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 400, 400 )

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 0, 800, 800, 800, 800, 0, 0, 0, 0, 800 )

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.309804 )
margin_left = 392.0
margin_top = 392.0
margin_right = 408.0
margin_bottom = 408.0

[node name="RestarLevel" type="Node2D" parent="."]
visible = false
z_index = 500
script = ExtResource( 3 )

[node name="GridContainer" type="GridContainer" parent="RestarLevel"]
margin_left = 32.0
margin_top = 40.0
margin_right = 280.0
margin_bottom = 283.0
rect_scale = Vector2( 3, 3 )

[node name="Label" type="Label" parent="RestarLevel/GridContainer"]
margin_right = 248.0
margin_bottom = 119.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "YOU DIED"
align = 1
valign = 1

[node name="Button" type="Button" parent="RestarLevel/GridContainer"]
pause_mode = 2
margin_top = 123.0
margin_right = 248.0
margin_bottom = 242.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "RESTART"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 400, 400 )
current = true

[node name="delay" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/NextWave = SubResource( 4 )
anims/RESET = SubResource( 5 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true
bus = "MUSIC"

[node name="ESC" type="Node2D" parent="."]
visible = false
z_index = 500

[node name="GridContainer" type="GridContainer" parent="ESC"]
margin_left = 32.0
margin_top = 40.0
margin_right = 280.0
margin_bottom = 283.0
rect_scale = Vector2( 3, 3 )

[node name="Label" type="Label" parent="ESC/GridContainer"]
margin_right = 248.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "PAUSED"
align = 1
valign = 1

[node name="LEVELS" type="Label" parent="ESC/GridContainer"]
margin_top = 42.0
margin_right = 248.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 7
align = 1
valign = 1

[node name="MusicSelector" type="GridContainer" parent="ESC/GridContainer"]
margin_top = 84.0
margin_right = 248.0
margin_bottom = 116.0
rect_min_size = Vector2( 0, 32 )
columns = 2

[node name="Label" type="Label" parent="ESC/GridContainer/MusicSelector"]
margin_right = 122.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "MUSIC"
align = 1
valign = 1

[node name="Handler" type="GridContainer" parent="ESC/GridContainer/MusicSelector"]
margin_left = 151.0
margin_top = 4.0
margin_right = 222.0
margin_bottom = 28.0
size_flags_horizontal = 6
size_flags_vertical = 6
columns = 3

[node name="PreviousMusic" type="Button" parent="ESC/GridContainer/MusicSelector/Handler"]
pause_mode = 2
margin_right = 24.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
size_flags_horizontal = 3
size_flags_vertical = 7
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "<"

[node name="ActualMusic" type="Label" parent="ESC/GridContainer/MusicSelector/Handler"]
margin_left = 28.0
margin_top = 4.0
margin_right = 43.0
margin_bottom = 20.0
rect_min_size = Vector2( 15, 15 )
text = "0"
align = 1
valign = 1

[node name="NextMusic" type="Button" parent="ESC/GridContainer/MusicSelector/Handler"]
pause_mode = 2
margin_left = 47.0
margin_right = 71.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
size_flags_horizontal = 3
size_flags_vertical = 7
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = ">"

[node name="GridContainer" type="GridContainer" parent="ESC/GridContainer"]
margin_top = 120.0
margin_right = 248.0
margin_bottom = 158.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="Label" type="Label" parent="ESC/GridContainer/GridContainer"]
margin_top = 11.0
margin_right = 122.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "MUSIC VOLUME"
align = 1
valign = 1

[node name="GridContainer" type="GridContainer" parent="ESC/GridContainer/GridContainer"]
margin_left = 126.0
margin_right = 248.0
margin_bottom = 38.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="ESC/GridContainer/GridContainer/GridContainer"]
margin_right = 122.0
margin_bottom = 17.0
size_flags_horizontal = 7
size_flags_vertical = 7
text = "5"
align = 1
valign = 1

[node name="MUSIC" type="HSlider" parent="ESC/GridContainer/GridContainer/GridContainer"]
pause_mode = 2
margin_top = 21.0
margin_right = 122.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 6
min_value = -5.0
max_value = 5.0

[node name="RESUME" type="Button" parent="ESC/GridContainer"]
pause_mode = 2
margin_top = 162.0
margin_right = 248.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "RESUME"

[node name="QUIT" type="Button" parent="ESC/GridContainer"]
pause_mode = 2
margin_top = 204.0
margin_right = 248.0
margin_bottom = 242.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "RETURN TO MAIN MENU"

[connection signal="button_up" from="RestarLevel/GridContainer/Button" to="RestarLevel" method="_on_Button_button_up"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
[connection signal="button_up" from="ESC/GridContainer/MusicSelector/Handler/PreviousMusic" to="." method="_on_PreviousMusic_button_up"]
[connection signal="button_up" from="ESC/GridContainer/MusicSelector/Handler/NextMusic" to="." method="_on_NextMusic_button_up"]
[connection signal="value_changed" from="ESC/GridContainer/GridContainer/GridContainer/MUSIC" to="." method="_on_MUSIC_value_changed"]
[connection signal="button_up" from="ESC/GridContainer/RESUME" to="." method="_on_RESUME_button_up"]
[connection signal="button_up" from="ESC/GridContainer/QUIT" to="." method="_on_QUIT_button_up"]
